--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
   <title>突然の死ジェネレーター</title>
   <link rel="stylesheet" href="style.css">
 </head>
-</h1>突然の死ジェネレーター</h1>
+<body>
+
+  <h1>突然の死ジェネレーター</h1>
 
   <form>
     <label for="content">Content:</label>
     <textarea id="content" name="content" required></textarea><br>
-    <button type="button" class="gen" onclick="gen">Generate</button>
+    <button type="button" class="gen" id="generateButton">Generate</button>
   </form>
 
   <div>
