--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <form>
     <label for="content">Content:</label>
-    <textarea id="content" name="content" required></textarea><br>
+    <textarea id="content" name="content" value="突然の死" required></textarea><br>
     <button type="button" class="gen" id="generateButton">Generate</button>
   </form>
 
